[tool.poetry]
name = "cosem-flows"
version = "0.1.0"
description = "Workflows for COSEM"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
xarray-multiscale = "^0.1.1"
fibsem-tools = "^0.1.5"
sheetscrape = "^0.1.0"
pymongo = "^3.11.2"
distributed = "^2021.1.1"
tqdm = "^4.54.1"
dask = "^2021.1.1"
fsspec = "^0.8.4"
dask-janelia = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"