[tool.poetry]
name = "cosem-flows"
version = "0.1.0"
description = "Workflows for COSEM"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
xarray-multiscale = "^0.1.7"
fibsem-tools = "^0.1.8"
pymongo = "^3.11.2"
distributed = "^2021.1.1"
tqdm = "^4.54.1"
dask = "^2021.1.1"
fsspec = "^2021.4.0"
dask-janelia = "^0.1.3"
pydantic = "^1.8.1"
fibsem-metadata = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"