[tool.poetry]
name = "cosem-flows"
version = "0.1.0"
description = "Workflows for COSEM"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
xarray-multiscale = "^0.2.1"
fibsem-tools = ">=0.2.2"
sheetscrape = "^0.1.0"
pymongo = "^3.11.2"
tqdm = "^4.54.1"
dask-janelia = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"